fixed z-index of check box

--- a/public/style.css
+++ b/public/style.css
@@ -458,17 +458,7 @@ padding: 0 1rem; */
     margin-right: 15px
 } */
 
-.form-check .form-check-label input {
-    position: absolute;
-    top: 0;
-    left: 0;
-    margin-left: 0;
-    margin-top: 0;
-    z-index: 1;
-    cursor: pointer;
-    opacity: 0;
-    filter: alpha(opacity=0);
-}
+
 
 /* input[type="radio"],
 input[type="checkbox"] {
@@ -551,6 +541,19 @@ input[type="checkbox"] {
 
 
 
+.form-check .form-check-label input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-left: 0;
+    margin-top: 0;
+    z-index: 1;
+    cursor:pointer;
+    opacity: 0;
+    filter: alpha(opacity=0);
+    
+}
+
 
 .form-check .form-check-label input[type="checkbox"]+.input-helper:before {
     content: "";
@@ -566,7 +569,8 @@ input[type="checkbox"] {
     transition: all;
     transition-duration: 0s;
     -webkit-transition-duration: 250ms;
-    transition-duration: 250ms
+    transition-duration: 250ms;
+    z-index: 999;
 }
 
 
